tests/borrowck/valid/copy_does_not_move.vit
space tests/borrowck/valid/copy_does_not_move

proc main() -> int {
  let value = 1;
  let copy = value;
  give value;
}
