tests/borrowck/invalid/mutable_borrow_conflict.vit
space tests/borrowck/invalid/mutable_borrow_conflict

proc make_box() -> Box {
  give Box { value: 1 };
}

form Box {
  value: int
}

proc main() -> int {
  let value = make_box();
  let shared = &value;
  let unique = &mut value;
  give 0;
}
